# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_mac.sh
CMakeEnv/: MacEnv.cmake  WindowEnv.cmake
Shaders/: Common.glsl  CommonFragment.glsl  CommonVertex.glsl  PBR.vert  PhoneShading.frag  PhoneShading.vert  Test.frag  Test.vert  Unlit.frag  Unlit.vert
VulkanEngine/VulkanEngine.xcodeproj/: project.pbxproj
VulkanEngine/VulkanEngine.xcodeproj/project.xcworkspace/xcuserdata/dark.xcuserdatad/: UserInterfaceState.xcuserstate
VulkanEngine/VulkanEngine.xcodeproj/xcuserdata/dark.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Main.cpp
src/Core/: VulkanEngineApplication.cpp  VulkanEngineApplication.h
src/Core/Common/: Common.cpp  Common.h
src/Core/Components/: IMGUIWindowManager.cpp  IMGUIWindowManager.h  ImGuiWindowManager.cpp  ImGuiWindowManager.h  TextureManager.cpp  TextureManager.h  UniformBufferInfo.h  VertexBuffer.h  VertexBufferInfo.h
src/Core/Components/Buffer/: MVPBufferInfo.h  MaterialBufferInfo.h  SceneBufferInfo.h  UniformBufferInfo.h  VertexBufferInfo.h
src/Core/Components/Scene/: GLTFSceneLoader.cpp  GLTFSceneLoader.h  ISceneLoader.h  SceneManager.cpp  SceneManager.h
src/Core/Components/Scene/Data/: Camera.cpp  Camera.h  GLTFShaderTypeUtil.h  GLTFShaderTypeUtils.hpp  MaterialBase.cpp  MaterialBase.h  MeshObject.cpp  MeshObject.h  ObjectBase.cpp  ObjectBase.h  ShaderBase.cpp  ShaderBase.h  ShaderType.h  ShaderTypeUtils.hpp  Transform.h  VulkanInterface.h
src/Core/Components/Scene/Data/Shader/: GLTFShaderTypeUtils.hpp  PBRShader.cpp  PBRShader.cpp.h  PBRShader.h  PhoneShadingShader.cpp  PhoneShadingShader.h  ShaderBase.cpp  ShaderBase.h  ShaderType.h  ShaderTypeUtils.hpp  UnlitShader.cpp  UnlitShader.h
src/Core/Vulkan/: Application.cpp  Application.h
src/Core/Vulkan/Common/: Common.h
src/Core/Vulkan/Components/: VulkanManager.cpp  VulkanManager.h  WindowManager.cpp  WindowManager.h
